# signalk-server-cpp

./: CMakeLists.txt  README.md  main.cpp
core/: DataBase.cpp  DataBase.h  DataProvider.cpp  DataProvider.hpp  ReaderHandler.h  SignalKModel.cpp  SignalKModel.h  WebSocketClientDataProvider.cpp  WebSocketClientDataProvider.hpp  WebSocketServerDataProvider.cpp  WebSocketServerDataProvider.hpp
core/model/: Node.cpp  SignalKModel.cpp  SignalKModel.h  UpdateBus.hpp
core/providers/: DataProvider.cpp  DataProvider.hpp  DataProviders.cpp  DataProviders.hpp  FileNMEA0183DataProvider.cpp  FileNMEA0183DataProvider.hpp  NMEA0183DataProvider.cpp  NMEA0183DataProvider.hpp  SerialNMEA0183DataProvider.cpp  SerialNMEA0183DataProvider.hpp  SignalKDataProvider.cpp  WebAPIDataProvider.cpp  WebAPIDataProvider.hpp  WebSocketClientDataProvider.cpp  WebSocketClientDataProvider.hpp  WebSocketServerDataProvider.cpp  WebSocketServerDataProvider.hpp
core/servers/: DataServer.cpp  DataServer.hpp  WebSocketDataServer.cpp  WebSocketDataServer.hpp
data/: SarimaV-20060114.nmea
settings/: SarimaV-simple.json  SarimaV.json
specifications/: delta.json  full.json  subscribe-all.json  subscribe-environment-depth-belowTransducer.json  subscribe-local-boat-individual-instruments.json  subscribe-navigation-speedThroughWater.json  unsubscribe-all.json
src/: SignalKServer.cpp  SignalKServer.hpp  main.cpp
src/core/: DataThread.cpp  DataThread.hpp  DataThreads.cpp  DataThreads.hpp
src/core/model/: Node.cpp  Node.hpp  SignalKModel.cpp  SignalKModel.h  Subscription.cpp  Subscription.hpp  Subscriptions.cpp  Subscriptions.hpp  UpdateBus.cpp  UpdateBus.hpp
src/core/providers/: DataProvider.cpp  DataProvider.hpp  DataProviders.cpp  DataProviders.hpp  NMEA0183DataProvider.cpp  SerialNMEA0183DataProvider.cpp  SignalKDataProvider.hpp  WebSocketClientDataProvider.cpp  WebSocketClientDataProvider.hpp
src/core/servers/: DataServer.cpp  DataServer.hpp  DataServers.cpp  DataServers.hpp  NMEA0183DataServer.cpp  NMEA0183DataServer.hpp  SignalKDataServer.cpp  SignalKDataServer.hpp  TcpIpNMEA0183DataServer.cpp  TcpIpNMEA0183DataServer.hpp  TcpIpSignalKDataServer.cpp  TcpIpSignalKDataServer.hpp  WebDataServer.cpp  WebDataServer.hpp
src/core/utils/: String.cpp  String.hpp
www/: index.html
